--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@ cover: true
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:35%;height:auto">
  
-I am a postdoctoral fellow in the Department of Ecosystem Science and Sustainability <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. I will be starting as an assistant professor in environmental science at the <a href="https://evsc.as.virginia.edu/">University of Virginia</a> in January 2024. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
+The Sustainable Watersheds Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably manage our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
+
+<br> <br> <b><u>About Dr. Frederick Cheng<b/><u/> 
+
+<br> <br> I am a postdoctoral fellow in the Department of Ecosystem Science and Sustainability <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. In January 2024, I will be joining the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a> as an assistant professor and starting the Sustainable Watersheds Group. 
+
+<br> <br> My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
  <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons! 
 
