--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ hide_image: false
 cover: true
 ---
 
-<img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:35%;height:auto">
+<img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:35%;height:auto;padding:5px">
  
-The Sustainable Watersheds Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably manage our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
+The Sustainable Watersheds Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably use our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
 
 <br> <br> <b>About Dr. Frederick Cheng</b> 
 
