--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: The Sustainable Watersheds Group
-description: Research website for Frederick Cheng at Colorado State University
+title: The Landscape Ecohydrology Group
+description: Research website for Frederick Cheng at the University of Virginia
 no_link_title: false 
 hide_description: true
 no_excerpt: false 
@@ -11,11 +11,11 @@ cover: true
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:35%;height:auto;padding:5px">
  
-The Sustainable Watersheds Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably use our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
+The Landscape Ecohydrology Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably use our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
 
 <br> <br> <b>About Dr. Frederick Cheng</b> 
 
-<br> <br> I am currently a postdoctoral researcher in the <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. In January 2024, I will be joining the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a> as an assistant professor and starting the Sustainable Watersheds Group. 
+<br> <br> I am an assistant professor in critical zone hydrology in the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a>. I was previously a postdoctoral researcher in the <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>.  
 
 <br> <br> My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
